# ashare-trading-board

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  scheduler.py
backend/scripts/: backfill_history.py  backfill_quotes.py  backtest_dayang.py  backtest_screener.py  build_qlib_data.py  build_theme_members.py  build_theme_members_em.py  daily_full.py  daily_scheduler_daemon.sh  daily_update.py  daily_update_quotes.py  decide_watchlist.py  demo_analysis.py  fetch_themes_auto.py  init_db.py  minute_updater_daemon.py  minute_updater_daemon.sh  run_backtest.py  run_decisions.py  run_discovery.py  run_one_decision.py  run_research.py  run_screener.py  seed_account.py  spike_screener.py  sync_stock_names.py
backend/tests/: conftest.py  test_adjust.py  test_api_account_pnl.py  test_api_backtest.py  test_api_decision_jobs.py  test_api_decisions.py  test_api_discovery.py  test_api_kline.py  test_api_market.py  test_api_names.py  test_api_research.py  test_api_screener.py  test_api_tracklist.py  test_api_trade.py  test_backtest_factor.py  test_backtest_qlib_data.py  test_backtest_scores.py  test_backtest_store.py  test_backtest_strategy.py  test_backtest_symbols.py  test_brief.py  test_broker.py  test_config.py  test_daily_full.py  test_decision_agents.py  test_decision_autoexec.py  test_decision_graph.py  test_decision_models.py  test_decision_runner.py  test_discovery_models.py  test_discovery_runner.py  test_discovery_scorer.py  test_financials.py  test_fundamentals.py  test_health.py  test_llm_clients.py  (+37 more)
(+147 files in other folders)
